# ai-image-detector

./: .gitignore  README.md  main.py  pyproject.toml
docs/: ai-image-detection-reliability.md
src/ai_image_detector/: __init__.py  __main__.py  app.py  cli.py  engine.py
src/ai_image_detector/analyzers/: __init__.py  metadata_analyzer.py  spectrum_analyzer.py  statistical_analyzer.py
src/ai_image_detector/resources/: __init__.py
src/ai_image_detector/static/css/: style.css
src/ai_image_detector/static/js/: app.js
src/ai_image_detector/templates/: index.html
