[project]
name = "ai-image-detector"
version = "0.1.0"
description = "多维度 AI 生成图片检测工具 — 元数据分析 + 频谱检测 + 统计特征"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "fastapi>=0.136.1",
    "jinja2>=3.1.6",
    "numpy>=2.4.4",
    "opencv-python-headless>=4.13.0.92",
    "pillow>=12.2.0",
    "python-multipart>=0.0.28",
    "pywavelets>=1.9.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "uvicorn>=0.46.0",
]

[project.scripts]
ai-detect = "ai_image_detector.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

